--- a/app/src/main/res/layout/diafrag_easyinput.xml
+++ b/app/src/main/res/layout/diafrag_easyinput.xml
@@ -23,6 +23,7 @@
                 android:id="@+id/r0"
 
                 style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
+                android:textColor="@color/text_black_87"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dip"/>
@@ -30,7 +31,8 @@
 
             <RadioButton
                 android:id="@+id/r1"
-                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
+                style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
+                android:textColor="@color/text_black_87"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dip"
@@ -42,6 +44,7 @@
             <RadioButton
                 android:id="@+id/r2"
                 style="@style/Base.Widget.AppCompat.CompoundButton.RadioButton"
+                android:textColor="@color/text_black_87"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dip"
