--- a/app/src/main/res/layout/frag_comment.xml
+++ b/app/src/main/res/layout/frag_comment.xml
@@ -1,86 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
+                android:background="@color/colorPrimaryDark"
+
                 android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
 
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dip"
+                        android:layout_weight="1">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            style="@style/ListView.NoDivider"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                style="@style/ListView.NoDivider"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                 >
+            </android.support.v7.widget.RecyclerView>
+
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                            android:id="@+id/ro_empty_list"
+                            android:background="@color/colorPrimaryDark"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                             >
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:id="@+id/tvEmptyTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="16dip"
+                        android:text="@string/no_comment"
+                        android:textColor="@color/white"
+                        android:textSize="18dip"/>
+
+                    <TextView
+                        android:id="@+id/tvEmptyDetail"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tvEmptyTitle"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="32dip"
+                        android:layout_marginLeft="18dip"
+                        android:layout_marginRight="18dip"
+                        android:gravity="center"
+                        android:text="@string/add_firstcomment"
+                        android:textColor="@color/text_white_87"
+                        android:textSize="16dip"/>
+
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:id="@+id/lo_chat_writesend"
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dip">
-        </android.support.v7.widget.RecyclerView>
-
-
-
-
-         <LinearLayout
-             android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                      android:orientation="horizontal"
-                      android:padding="4dip"
-                       android:layout_margin="8dip"
-                      android:id="@+id/lo_chat_writesend"
-                       >
-
-
+            android:layout_height="wrap_content"
+            android:layout_margin="8dip"
+            android:orientation="horizontal"
+            android:padding="4dip"
+            >
 
 
             <EditText
                 android:id="@+id/etWrite"
-                android:layout_height="match_parent"
-                android:layout_width="0dip"
-                android:layout_weight="1"
                 style="@style/EditText.Comment"
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
                 android:layout_margin="0dip"
+                android:layout_weight="1"
 
                 />
 
             <ImageView
                 android:id="@+id/ivWrite"
-                style="@style/iv_sendmessage" />
+                style="@style/iv_sendmessage"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
-    <!--<include-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="56dip"-->
-    <!--android:layout_alignParentBottom="true"-->
-    <!--android:id="@+id/tv_done"-->
-    <!--layout="@layout/tv_done"/>-->
-
-
-
-    <include
-        android:id="@+id/ro_empty_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        layout="@layout/ro_empty_list"
-        android:visibility="gone"
-        />
 
 
     <RelativeLayout
         android:id="@+id/vProgress"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:visibility="gone">
 
         <TextView
-            android:text="progress"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="progress"/>
 
     </RelativeLayout>
 
