--- a/app/src/main/res/layout/frag_content_nodividerlist.xml
+++ b/app/src/main/res/layout/frag_content_nodividerlist.xml
@@ -53,18 +53,12 @@
         />
 
 
-    <RelativeLayout
+    <include
         android:id="@+id/vProgress"
+        layout="@layout/ro_prog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:text="progress"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
