--- a/app/src/main/res/layout/frag_newoq_1.xml
+++ b/app/src/main/res/layout/frag_newoq_1.xml
@@ -70,6 +70,7 @@
 
                     <ImageView
                         android:id="@+id/ivPhotoMain"
+                        android:scaleType="centerCrop"
                         android:layout_width="match_parent"
                         android:layout_height="200dip"/>
 
