--- a/app/src/main/res/layout/i_post.xml
+++ b/app/src/main/res/layout/i_post.xml
@@ -162,38 +162,49 @@
         </LinearLayout>
 
 
+
+
+
+
+
         <LinearLayout
             android:id="@+id/loCommentOne"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="36dip">
-
-                <View
-
-                    android:layout_weight="1"
-                    android:layout_width="0dip"
-                    android:layout_height="match_parent"/>
-
-                <TextView
-                    android:id="@+id/tvAddComment"
-                    android:gravity="center"
-                    android:textSize="12dip"
-                    android:layout_marginRight="16dip"
-                    android:text="@string/add_postcomment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"/>
-
-            </LinearLayout>
 
 
 
         </LinearLayout>
 
+        <LinearLayout
+            android:background="@color/material_grey_200"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <TextView
+                android:padding="8dip"
+                android:id="@+id/tvNumComment"
+                android:gravity="center"
+                android:textSize="12dip"
+                android:layout_marginRight="16dip"
+                android:text="@string/add_postcomment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dip"
+                android:layout_height="1dip"/>
+            <TextView
+                android:padding="8dip"
+                android:id="@+id/tvAddComment"
+                android:gravity="center"
+                android:textSize="12dip"
+                android:text="@string/add_postcomment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
