--- a/app/src/main/res/layout/item_mainfrag0.xml
+++ b/app/src/main/res/layout/item_mainfrag0.xml
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <include
-        android:id="@+id/loTwoAvaWrap"
-        layout="@layout/lo_twoavatars_relation_names_explain_date"/>
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+    >
 
     <LinearLayout
-        android:id="@+id/lolvTwoAvaHistory"
-        android:orientation="vertical"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                  android:id="@+id/loWrap"
+                  android:layout_width="match_parent"
+                  android:layout_height="@dimen/md_72dip"
+                  android:gravity="center_vertical">
+
+        <include
+            android:id="@+id/roAva"
+            layout="@layout/ro_ava_48dip"
+            android:layout_width="48dip"
+            android:layout_height="48dip"
+            android:layout_marginLeft="@dimen/md_16dip"/>
+
+        <LinearLayout
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/md_12dip"
+            android:layout_marginLeft="@dimen/md_16dip"
+            android:layout_marginRight="@dimen/md_16dip"
+            android:layout_marginTop="@dimen/md_12dip"
+
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="5"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="bottom|left"
+                    android:singleLine="true"
+                    android:text="Jack"
+                    android:textColor="@color/text_black_87"
+                    android:textSize="16sp"
+                    />
+
+                <TextView
+                    android:id="@+id/tvResultAmmount"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dip"
+                    android:gravity="bottom"
+                    android:text="+3,000"
+                    android:textSize="14sp"/>
+
+                <TextView
+
+                    android:id="@+id/tvResultAmmount2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dip"
+                    android:gravity="bottom"
+                    android:paddingBottom="1sp"
+                    android:text="(+3,000)"
+                    android:textSize="12sp"/>
+
+            </LinearLayout>
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dip"
+                android:layout_weight="5"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:id="@+id/tvContent"
+
+                    android:layout_width="0dip"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|left"
+                    android:singleLine="true"
+                    android:text="Cool Alarm"
+                    android:textColor="@color/text_black_87"
+                    android:textSize="16sp"/>
+
+                <TextView
+                    android:id="@+id/tvTs"
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                     android:gravity="bottom|left"
+                    android:singleLine="true"
+                    android:text="00:00"
+                    android:textColor="@color/text_black_54"
+                    android:textSize="12sp"/>
+
+                <!--<TextView-->
+                <!--android:id="@+id/tvUnread__lo_avatar_namedate_chatread"-->
+                <!--style="@style/TextView.ChatUnreadNum.12"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_marginLeft="8dip"/>-->
+
+                <!--<ImageView-->
+                <!--android:layout_gravity="bottom"-->
+                <!--android:id="@+id/ivHistory"-->
+                <!--android:src="@drawable/ic_expand_more_white_48dp"-->
+                <!--style="@style/ImageView.WhiteImageSrcTransparentBg.24"-->
+
+                <!--/>-->
+
+            </LinearLayout>
+
+
+        </LinearLayout>
     </LinearLayout>
     <View
-        android:background="@color/light_grey"
         android:layout_width="match_parent"
-        android:layout_height="1px"/>
+        android:layout_height="1px"
+        android:background="@color/material_grey500"/>
 </LinearLayout>
