--- a/app/src/main/res/layout/item_profileactivity.xml
+++ b/app/src/main/res/layout/item_profileactivity.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical"
     >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="@dimen/md_72dip"
                   android:gravity="center_vertical">
@@ -109,7 +109,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
                   android:id="@+id/loBreakDown"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
