--- a/app/src/main/res/layout/lo_commentlayout.xml
+++ b/app/src/main/res/layout/lo_commentlayout.xml
@@ -2,23 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@color/material_grey_200"
               android:orientation="vertical">
-
+    <View
+        android:background="@color/colorItemline"
+        android:layout_width="match_parent"
+        android:layout_height="1px"/>
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="@dimen/md_72dip"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="left|top">
 
             <include
                 android:id="@+id/roAvatar"
-                layout="@layout/ro_ava_48dip"
-                android:layout_width="@dimen/md_48dip"
-                android:layout_height="@dimen/md_48dip"
+                layout="@layout/ro_ava_32dip"
+                android:layout_width="32dip"
+                android:layout_height="32dip"
                 android:layout_margin="@dimen/md_12dip"/>
 
         </LinearLayout>
@@ -29,7 +33,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingTop="12dip">
+            android:paddingTop="10dip">
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -42,9 +46,9 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|left"
                     android:text="Jack"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/md_13sp"
-                    android:textStyle="bold"
+                     android:textSize="@dimen/md_13sp"
+                    android:textColor="@color/text_black_87"
+
                     />
 
                 <TextView
@@ -63,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|left"
                 android:text="Cool Alarm \nNice to Meet you! \nSee You Again!"
-                android:textColor="@android:color/primary_text_dark"
+                android:textColor="@color/text_black_54"
                 android:textSize="@dimen/md_13sp"
 
                 />
@@ -71,12 +75,9 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="16dp"/>
+                android:layout_height="12dp"/>
         </LinearLayout>
 
     </LinearLayout>
-    <View
-        android:background="@color/colorItemline"
-        android:layout_width="match_parent"
-        android:layout_height="1px"/>
+
 </LinearLayout>
