--- a/app/src/main/res/layout/avadtl_mainfrag0item.xml
+++ b/app/src/main/res/layout/avadtl_mainfrag0item.xml
@@ -29,7 +29,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvNameTwoAva"
+                android:id="@+id/tvMainContent"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -43,7 +43,7 @@
             <TextView
                 android:gravity="bottom"
 
-                android:id="@+id/tvResultAmmount"
+                android:id="@+id/tvProfileActivityTs"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="8dip"
@@ -73,7 +73,7 @@
             <TextView
                 android:layout_gravity="center_vertical"
 
-                android:id="@+id/tvContentTwoAva"
+                android:id="@+id/tvAfterContent"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
