--- a/app/src/main/res/layout/i_2ava_oqdo_small.xml
+++ b/app/src/main/res/layout/i_2ava_oqdo_small.xml
@@ -28,7 +28,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvResultAmmount"
+                android:id="@+id/tvProfileActivityTs"
                 android:gravity="center_vertical|left"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -46,7 +46,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvContentTwoAva"
+                android:id="@+id/tvAfterContent"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
