--- a/app/src/main/res/layout/i_post.xml
+++ b/app/src/main/res/layout/i_post.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/cardview"
-                                    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                    xmlns:tools="http://schemas.android.com/tools"
 
+                                    android:id="@+id/cardview"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="vertical"
                                     card_view:cardElevation="4dp"
-                                    card_view:cardUseCompatPadding="true"
-                                    xmlns:tools="http://schemas.android.com/tools">
+                                    card_view:cardUseCompatPadding="true">
 
 
     <LinearLayout
@@ -68,16 +68,40 @@
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvDeed"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dip"
                     android:layout_weight="1"
-                    android:gravity="center_vertical|left"
-                    android:text="Cool Alarm"
-                    android:textColor="@color/text_black_54"/>
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvDeed"
+                        android:layout_width="0dip"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|left"
+                        android:text="Cool Alarm"
+                        android:textColor="@color/text_black_54"/>
+
+                    <ImageView
+                        android:id="@+id/ivMore"
+                        android:layout_width="18dip"
+                        android:layout_height="18dip"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_more_vert_white_48dp"/>
+                </LinearLayout>
+
 
             </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/loOqOppo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/material_blue_grey_200"
+            android:orientation="vertical">
+
         </LinearLayout>
 
 
@@ -96,9 +120,9 @@
 
             <ImageView
                 android:id="@+id/ivPhotoMain"
-                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="240dip"/>
+                android:layout_height="240dip"
+                android:scaleType="centerCrop"/>
 
 
             <RelativeLayout
@@ -123,48 +147,26 @@
                     android:gravity="center"
                     android:text="+2"
                     android:textColor="@color/alphawhite_50"
-                    android:visibility="gone"
                     android:textSize="16dip"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:visibility="gone"/>
 
             </RelativeLayout>
         </RelativeLayout>
 
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
-                      android:paddingBottom="@dimen/md_24dip"
-                      android:paddingLeft="@dimen/md_16dip"
-                      android:paddingRight="@dimen/md_16dip"
-                      android:paddingTop="@dimen/md_16dip">
-
-            <TextView
-                android:id="@+id/tvSupportingText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColor="@color/text_black_87"
-
-
-                android:text="@string/dummytext"
-                android:textSize="@dimen/md_14sp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:background="@color/cyan5"
-            android:id="@+id/loOqOppo"
+        <TextView
+            android:id="@+id/tvSupportingText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:paddingBottom="@dimen/md_24dip"
 
-        </LinearLayout>
-
-
-
-
-
+            android:paddingLeft="@dimen/md_16dip"
+            android:paddingRight="@dimen/md_16dip"
+            android:paddingTop="@dimen/md_24dip"
+            android:text="@string/dummytext"
+            android:textColor="@color/text_black_87"
+            android:textSize="@dimen/md_14sp"/>
 
 
         <LinearLayout
@@ -174,36 +176,37 @@
             android:orientation="vertical">
 
 
-
         </LinearLayout>
 
         <LinearLayout
-            android:background="@color/material_grey_200"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/material_grey_200"
             android:orientation="horizontal">
 
             <TextView
-                android:padding="8dip"
                 android:id="@+id/tvNumComment"
-                android:gravity="center"
-                android:textSize="12dip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="16dip"
-                android:text="@string/add_postcomment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <View
-                android:layout_weight="1"
-                android:layout_width="0dip"
-                android:layout_height="1dip"/>
-            <TextView
-                android:padding="8dip"
-                android:id="@+id/tvAddComment"
                 android:gravity="center"
-                android:textSize="12dip"
+                android:padding="8dip"
                 android:text="@string/add_postcomment"
+                android:textSize="12dip"/>
+
+            <View
+                android:layout_width="0dip"
+                android:layout_height="1dip"
+                android:layout_weight="1"/>
+
+            <TextView
+                android:id="@+id/tvAddComment"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="8dip"
+                android:text="@string/add_postcomment"
+                android:textSize="12dip"/>
         </LinearLayout>
 
     </LinearLayout>
