--- a/app/src/main/res/layout/item_profileactivity.xml
+++ b/app/src/main/res/layout/item_profileactivity.xml
@@ -6,9 +6,9 @@
     >
 
     <LinearLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="@dimen/md_72dip"
-                  android:gravity="center_vertical">
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/md_72dip"
+        android:gravity="center_vertical">
 
         <include
             android:id="@+id/roRelationTwoAva"
@@ -35,7 +35,8 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvNameTwoAva"
+
+                    android:id="@+id/tvMainContent"
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -47,7 +48,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/tvResultAmmount"
+                    android:id="@+id/tvProfileActivityTs"
 
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -77,7 +78,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvContentTwoAva"
+                    android:id="@+id/tvAfterContent"
 
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
@@ -86,7 +87,7 @@
                     android:gravity="center_vertical|left"
                     android:singleLine="true"
                     android:text="Cool Alarm"
-                    android:textColor="@color/text_black_87"
+                    android:textColor="@color/text_black_54"
                     android:textSize="16sp"/>
 
                 <!--<TextView-->
@@ -99,7 +100,7 @@
                     android:id="@+id/ivMoreTwoAvaHistory"
                     style="@style/ImageView.WhiteImageSrcTransparentBg.24"
                     android:layout_gravity="bottom"
-                    android:src="@drawable/ic_expand_more_white_48dp"
+                    android:src="@drawable/ic_more_vert_white_48dp"
 
                     />
 
@@ -110,11 +111,17 @@
     </LinearLayout>
 
     <LinearLayout
-                  android:id="@+id/loBreakDown"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="vertical"
+        android:id="@+id/loBreakDown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/material_blue_grey_200"
+        android:orientation="vertical"
         >
 
     </LinearLayout>
+    <View
+        android:background="@color/colorItemline"
+        android:layout_width="match_parent"
+        android:layout_height="1px"/>
+
 </LinearLayout>
