--- a/app/src/main/res/layout/lo_chat_writesend.xml
+++ b/app/src/main/res/layout/lo_chat_writesend.xml
@@ -13,6 +13,7 @@
 
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/ivEmoji__lo_chat_writesend"
         style="@style/iv_emoji" />
 
