--- a/app/src/main/res/layout/lo_twoavatars_relation_names_explain_date.xml
+++ b/app/src/main/res/layout/lo_twoavatars_relation_names_explain_date.xml
@@ -35,7 +35,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvNameTwoAva"
+                    android:id="@+id/tvMainContent"
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -47,7 +47,7 @@
                     />
 
                 <TextView
-                    android:id="@+id/tvResultAmmount"
+                    android:id="@+id/tvProfileActivityTs"
 
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -77,7 +77,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvContentTwoAva"
+                    android:id="@+id/tvAfterContent"
 
                     android:layout_width="0dip"
                     android:layout_height="match_parent"
